Administrator Interface - Resident Media - fix bug when deleting all selected files, fix button "shifting" when uploading/saving media files

--- a/WebUI/Keebee.AAT.Administrator/Content/Site.css
+++ b/WebUI/Keebee.AAT.Administrator/Content/Site.css
@@ -89,7 +89,7 @@ a:hover, a:visited, a:link, a:active {
     list-style: none;
 }
 #menu-login {
-    color: #0066ff;
+    color: #418cff;
 }
 
 /* dialogs */
@@ -119,7 +119,9 @@ a:hover, a:visited, a:link, a:active {
 }
 .link-back-to-residents {
     font-size: 16px;
+    font-weight: bold;
     margin: -30px 0 0 0;
+
 }
 .add-media-description {
     font-size: 14px;
